<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:stretchColumns="1,2,3"
    tools:context="com.example.whack_a_zack.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1,2,3" >

        <TableLayout
            android:stretchColumns="1,2" >
        </TableLayout>

        <TableLayout
            android:layout_column="1"
            android:stretchColumns="1,2" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/life"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/life" />

                <EditText
                    android:id="@+id/life_count"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center|left"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:text="@string/life_count" >

                    <requestFocus />
                </EditText>

            </TableRow>

        </TableLayout>

        <TableLayout android:stretchColumns="1,2" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/time" />

                <EditText
                    android:id="@+id/time_count"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center|left"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:text="@string/time_count" />

            </TableRow>

        </TableLayout>

        <TableLayout android:stretchColumns="1,2" >
            
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:text="@string/score" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center|left"
                android:paddingRight="5dp"
                android:inputType="number"
                android:text="@string/score_count" />

        </TableRow>
	</TableLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <ImageButton
            android:id="@+id/hole1"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:background="@drawable/background"
            android:contentDescription="First"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

        <ImageButton
            android:id="@+id/hole2"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:background="@drawable/background"
            android:contentDescription="Second"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

        <ImageButton
            android:id="@+id/hole3"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:background="@drawable/background"
            android:contentDescription="Third"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/hole4"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:background="@drawable/background"
            android:contentDescription="Fourth"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

        <ImageButton
            android:id="@+id/hole5"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:background="@drawable/background"
            android:contentDescription="Fifth"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

        <ImageButton
            android:id="@+id/hole6"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:background="@drawable/background"
            android:contentDescription="Sixth"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/hole7"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:background="@drawable/background"
            android:contentDescription="Seventh"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

        <ImageButton
            android:id="@+id/hole8"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:background="@drawable/background"
            android:contentDescription="Eighth"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

        <ImageButton
            android:id="@+id/hole9"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_column="3"
            android:background="@drawable/background"
            android:contentDescription="Ninth"
            android:gravity="center"
            android:src="@drawable/whackzack"
            android:minWidth="50dp" />

    </TableRow>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start"
        android:textSize="14sp"
        android:width="50dp" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

    </TableRow>

</TableLayout>